--- a/HomeTasks/5/style.css
+++ b/HomeTasks/5/style.css
@@ -1,47 +1,41 @@
 body {
     min-width: 1000px;
 }
-    
-/* div {
-    opacity: 1;
-}background-image: url(./pic/1610963001552.jpeg);
-    opacity: .5; */
 
 .main {
     height: 500px;
-    /* padding: 0px 250px; */
 }
 
 .header {
     height: 80px;
     display: flex;
-    /* background-color: blue; */
     padding: 0px 30px;
+    background-image: url("./pic/back.png");
 }
 
 .content {
     height: 800px;
-    background-color: blueviolet;
     display: flex;
 }
 
-/* .photo {
-    
-} */
-
 .logo {
-    /* flex-basis: 20%; */
     width: 20%;
 }
 
+#logo {
+    max-width: 360px;
+}
+
+#logo1 {
+    max-width: 360px;
+}
+
 .data {
-    /* flex-basis: 20%; */
     width: 20%;
     display: flex;
 }
 
 .buttons {
-    /* flex-basis: 60%; */
     width: 50%;
     display: flex;
     justify-content: space-evenly;
@@ -59,38 +53,54 @@ button {
 }
 
 .but {
-    /* flex-basis: 20%; */
-    width: 20%;
+    width: 25%;
 }
 
 .con_left {
-    /* flex-basis: 25%; */
     width: 25%;
-    background-color: brown;
     height: 100%;
+    padding: 10px;
 }
 
 .con_center {
-    /* flex-basis: 50%; */
     width: 50%;
-    background-color: burlywood;
-    height: 100%;
+    padding: 20px;
+    justify-content: space-between;
+    justify-content: stretch;
+    overflow-y: scroll;
+}
+
+.con_center img {
+width: 320px;
+height: 168px;
+float: left;
 }
 
 .con_right {
-    /* flex-basis: 25%; */
     width: 25%;
-    background-color: cadetblue;
-    height: 100%;
+    justify-content: space-between;
+    justify-content: stretch;
+    overflow-y: scroll;
+    padding: 10px;
 }
 
 .footer {
-    height: 150px;
-    background-color: chartreuse;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.footer_p {
+    font-size: x-small;
+}
+
+.social img {
+    width: 70px;
+    height: 70px;
 }
 
 p {
     width: 100%;
+    text-align: justify;
 }
 
 #av {
@@ -100,26 +110,11 @@ p {
     min-height: 80px;
 }
 
-.left_down {
-    background-color: chartreuse;
+span, p {
+    font-family: 'Lobster', cursive;
 }
 
-.left_up {
-    background-color: cornflowerblue;
-}
-
-.ld_1 {
-    background-color: cornsilk;
-}
-
-.ld_2 {
-    background-color: rgb(59, 127, 204);
-}
-
-.ld_3 {
-    background-color: rgb(37, 117, 27);
-}
-
-.ld_4 {
-    background-color: rgb(88, 75, 21);
+#partners {
+    font-size: x-large;
+    color: aqua;
 }
