--- a/HomeTasks/7/style.css
+++ b/HomeTasks/7/style.css
@@ -2,6 +2,10 @@ body {
     min-width: 400px;
 }
 
+/* .main_block {
+    position: relative;
+} */
+
 .header {
     display: flex;
     height: 50px;
@@ -27,7 +31,8 @@ body {
 
 .content {
     display: flex;
-
+    /* height: 100%; */
+    /* overflow-y: scroll; */
 }
 
 .form_in {
@@ -64,17 +69,22 @@ form > div {
 }
 
 .footer p{
-line-height: 0.2;
-padding-top: 1px;
-
+    line-height: 0.2;
+    padding-top: 1px;
 }
 
 .footer {
     background-color: rgb(59, 139, 214);
     border-radius: 10px 10px 0px 0px;
-	position: absolute;
-	left: 0;
-	bottom: 0;
-	width: 100%;
-	height: 80px;
+	/* position: fixed; 
+	bottom: 0; */
+	height: 90px;
+    width: 100%;
+    padding: 10px;
+
+}
+
+.text {
+    height: 100%;
+    flex-basis: 50%;
 }
