--- a/HomeTasks/7/style.css
+++ b/HomeTasks/7/style.css
@@ -14,6 +14,10 @@ body {
     border-radius: 0px 0px 10px 10px;
 }
 
+a {
+    text-decoration: none;
+}
+
 .logo img {
     height: 50px;
 }
@@ -64,10 +68,6 @@ form > div {
     text-align: justify;
 }
 
-.text {
-    overflow-y: scroll;
-}
-
 .footer p{
     line-height: 0.2;
     padding-top: 1px;
@@ -76,15 +76,23 @@ form > div {
 .footer {
     background-color: rgb(59, 139, 214);
     border-radius: 10px 10px 0px 0px;
-	/* position: fixed; 
-	bottom: 0; */
+	position: fixed; 
+	bottom: 0;
+    left: 0;
 	height: 90px;
-    width: 100%;
     padding: 10px;
+    margin: 10px;
+    width: -webkit-fill-available;
 
 }
 
 .text {
     height: 100%;
     flex-basis: 50%;
+    max-height: 70vh;
+    overflow-y: auto;
+}
+
+.gender, .policy {
+    display: inline-block;
 }
