--- a/9/css/style.css
+++ b/9/css/style.css
@@ -1,3 +1,14 @@
 @import "./front.css";
 @import "./form.css";
-@import "./modal.css"
+@import "./modal.css";
+@import "./media.css";
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+
+@keyframes spin {
+    from {
+        transform: rotateY(0deg);
+    }
+    to {
+        transform: rotateY(360deg);
+    }
+}
