--- a/9/css/media.css
+++ b/9/css/media.css
@@ -1,9 +1,9 @@
 @media (max-width: 700px) {
-    #maxwidth {
+        #maxwidth {
         height: 100vh;
         width: 100vw;
         background-color: black;
-        display: none;
+        display: inline-block;
         position: absolute;
         top: 0;
         left: 0;
