--- a/10/sass/style.scss
+++ b/10/sass/style.scss
@@ -1,22 +1,96 @@
+@import "./var.scss";
+@import "./modal.scss";
+
+* {
+    margin: 0;
+}
+
+a {
+    text-decoration: none;
+}
+
+::-webkit-scrollbar {
+    width: 10px;
+    background-color: rgb(155, 157, 158);
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: rgb(119, 178, 245);
+    border-radius: 10px;
+}
+
 .main {
     display: grid;
-    grid-template-columns: 1fr 2fr 1fr;
+    grid-template-columns: 1fr 3fr 1fr;
     grid-auto-rows: minmax(auto, auto);
     grid-auto-columns: min-content;
     gap: 10px;
+    min-width: 1150px;
 
     .header {
         display: grid;
         height: 70px;
-        grid-template-columns: 3fr 15fr 4fr 2fr;
+        grid-template-columns: 3fr 25fr 4fr 3fr;
         grid-column: 1/4;
-        background-color: blue;
+        background-color: rgb(0, 174, 255);
         border-radius: 0 0 10px 10px;
 
         img {
-            height: 70%;
-            background-color: blue;
+            height: 70px;
         }
-    }
-}
 
+        #sitename {
+            @extend %posWH;
+        }
+
+        #signup {
+            @include posWH (center, center);
+        }
+
+    }
+
+    .signin {
+        @extend %form;
+    }
+
+    .content {
+        overflow-y: auto;
+        height: 100vh;
+        @include posWH (center, center);
+
+        .speakers {
+            display: flex;
+            flex-wrap: wrap;
+
+            div {
+                margin: 10px;
+                @include size (230px, 230px)
+            }
+
+            img {
+                border-radius: 50%;
+
+                &:hover {
+                    @include size (150px, 150px)
+                }
+
+            }
+
+        }
+
+        > p {
+            font-size: larger;
+            color: rgb(69, 185, 201);
+        }
+
+    }
+
+    .footer {
+        height: 70px;
+        grid-column: 1/4;
+        background-color: rgb(0, 174, 255);
+        border-radius: 10px 10px 0 0; 
+    }
+
+}
