--- a/12/sass/index.scss
+++ b/12/sass/index.scss
@@ -1,11 +1,11 @@
 table {
     border: solid;
-    td {
-        width: 55px;
+
+    input {
+        width: 100%;
+        height: 56px;
     }
-    tr {
-        height: 28px;
-    }
+    
     textarea {
         max-width: 290px;
         min-width: 290px;
@@ -14,34 +14,33 @@ table {
         overflow-y: scroll;
         background-color: #b5b5bb;
     }
-}
 
-button {
-    width: 50px;
-    height: 100%;
-    border-radius: 8px;
-    -webkit-box-shadow: 5px 5px 5px 0px #000125, inset 4px 4px 15px 0px #0002fb, 5px 5px 15px 5px rgba(0,0,0,0); 
-    box-shadow: 4px 4px 4px 0px #000125, inset 4px 4px 15px 0px #0002fb, 5px 5px 15px 5px;
-    cursor: pointer;
-    border: none;
+    td {
+    width: 55px;
 
-    &:hover {
-        margin: 1px;
-        -webkit-box-shadow: 5px 5px 5px 0px #000125, inset 4px 4px 15px 0px #0002fb, 5px 5px 15px 5px rgba(0,0,0,0); 
-        box-shadow: 4px 4px 4px 0px #ca4937, inset 4px 4px 15px 0px #fb4f00, 5px 5px 15px 5px;
+        button {
+            width: 50px;
+            height: 100%;
+            border-radius: 8px;
+            -webkit-box-shadow: 5px 5px 5px 0px #000125, inset 4px 4px 15px 0px #0002fb, 5px 5px 15px 5px; 
+            box-shadow: 4px 4px 4px 0px #000125, inset 4px 4px 15px 0px #0002fb, 5px 5px 15px 5px;
+            cursor: pointer;
+            border: none;
+
+            &:hover {
+                margin: 1px;
+                -webkit-box-shadow: 5px 5px 5px 0px #000125, inset 4px 4px 15px 0px #0002fb, 5px 5px 15px 5px; 
+                box-shadow: 4px 4px 4px 0px #ca4937, inset 4px 4px 15px 0px #fb4f00, 5px 5px 15px 5px;
+            }
+            
+        }
+
+    }
+
+    tr {
+        height: 28px;
     }
 
 }
 
-#equally {
-    height: 50px;
-}
 
-#zero {
-    width: 112px;
-}
-
-input {
-    width: 97%;
-    height: 56px;
-}
