--- a/final/sass/style.scss
+++ b/final/sass/style.scss
@@ -1,77 +1,12 @@
+@import './vars.scss';
+@import './header.scss';
+@import './content.scss';
+@import './footer.scss';
+
 * {
     margin: 0;
-    font-family: 'Bad Script', cursive;
 }
 
 .mainClass {
-
     min-width: 650px;
-
-    .header {
-    display: grid;
-    grid-column: 1/4;
-    grid-template-columns: 80px 11fr 2fr 2fr;
-    height: 70px;
-    background-color: aqua;
-    border-radius: 0 0 10px 10px;
-    
-    
-        .logo {
-            text-align: right;
-            align-self: center;
-
-            img {
-                width: 90%;
-            }
-        }
-
-        .siteName {
-            text-align: center;
-            align-self: center;
-            font-size: 20px;
-        }
-
-
-        .signIn {
-            text-align: center;
-            align-self: center;
-        }
-        
-        .photo {
-            background-color: black;
-            text-align: center;
-            align-self: center;
-        }
-
-
-    }
-
-    .content {
-        display: grid;
-        grid-column: 1/3;
-        grid-template-columns: 4fr 10fr;
-        height: 100%;
-        background-color: green;
-
-        #signUp {
-            height: 70px;
-            background-color: red;
-        }
-
-        #startContent {
-            
-        }
-
-    }
-
-    .footer{
-        min-width: 650px;
-        height: 70px;
-        background-color: aqua;
-        border-radius: 10px 10px 0 0;
-        position: fixed; 
-        bottom: 0;
-        width: -webkit-fill-available;
-    }
-
 }
