--- a/final/css/style.css
+++ b/final/css/style.css
@@ -1,9 +1,13 @@
-.header { height: 70px; background-color: aqua; border-radius: 0 0 10px 10px; display: grid; grid-column: 1/4; grid-template-columns: 70px 11fr 1fr; }
+.header { height: 70px; background-color: aqua; border-radius: 0 0 10px 10px; display: grid; grid-column: 1/4; grid-template-columns: 70px 11fr 1fr; align-items: center; text-align: center; }
 .header .logo img { width: 100%; }
 
 textarea { resize: none; width: 500px; height: 70px; }
 
-.footer { min-width: 650px; height: 70px; background-color: aqua; border-radius: 10px 10px 0 0; position: fixed; bottom: 0; width: -webkit-fill-available; }
+.content { display: grid; grid-column: 1/3; grid-template-columns: 1fr 4fr; }
+
+.footer { min-width: 650px; height: 70px; background-color: aqua; border-radius: 10px 10px 0 0; position: fixed; bottom: 0; width: -webkit-fill-available; display: flex; flex-wrap: wrap; align-items: center; justify-content: center; }
+.footer div { margin: 10px; }
+.footer div a { text-decoration: none; color: black; background-color: rgba(100, 96, 96, 0.664); }
 
 * { margin: 0; }
 
