--- a/final/sass/content.scss
+++ b/final/sass/content.scss
@@ -3,3 +3,9 @@ textarea {
     width: 500px;
     height: 70px;
 }
+
+.content {
+    display: grid;
+    grid-column: 1/3;
+    grid-template-columns: 1fr 4fr;
+}
