--- a/final/final/src/styles/style.scss
+++ b/final/final/src/styles/style.scss
@@ -2,9 +2,11 @@
 @import './header.scss';
 @import './content.scss';
 @import './footer.scss';
+@import url('https://fonts.googleapis.com/css2?family=Dosis:wght@200&family=Pacifico&display=swap');
 
 * {
     margin: 0;
+    font-family: 'Dosis', sans-serif;
 }
 
 .mainClass {
