--- a/final_new/src/styles/header.scss
+++ b/final_new/src/styles/header.scss
@@ -4,7 +4,7 @@
     border-radius: 0 0 10px 10px;
     display: grid;
     grid-column: 1/5;
-    grid-template-columns: 70px 15fr 1fr 1fr;
+    grid-template-columns: 70px 15fr 2fr;
     align-items: center;
     text-align: center;
     font-size: 30px;
@@ -21,27 +21,22 @@
         :hover {
             color: red;
         }
-
-        
     }
     
     .userName {
+
         p {
             color: black;
             text-decoration: none;
             font-weight: bold;
             font-size: 20px;
         }
-
     }
 
     .logo {
 
-        // img {
-        //     width: 100%;
-        // }
+        img {
+            width: 100%;
+        }
     }
-
-
-
 }
